rule-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cilist-ingress-production
  namespace: production
spec:
  ingressClassName: nginx
  rules:
  - host: users.smallproject.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cilist-frontend
            port:
              number: 3000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: cilist-backend
            port:
              number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cilist-ingress-staging
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
  - host: users-uat.smallproject.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cilist-frontend
            port:
              number: 3000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: cilist-backend
            port:
              number: 5000
